--- a/my-backstage-template/app-template/catalog-info.yaml
+++ b/my-backstage-template/app-template/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.appliction_name | dump}}
+  name: ${{values.application_name | dump}}
   description: ${{values.description | dump}}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
